# tpch-query5-cpp

./: CMakeLists.txt  Dockerfile  Makefile  README.md
docs/: implementation.md
include/: data_loader.h  data_types.h  query_processor.h  thread_pool.h
scripts/: generate_data.sh  run_test.sh
src/: data_loader.cpp  main.cpp  query_processor.cpp  thread_pool.cpp
